agregar producto a carrito

--- a/proyecto/html/Carrito.html
+++ b/proyecto/html/Carrito.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <!-- <div id="header"></div> -->
+    <div id="header"></div>
 
     <div class="wrapper">
         <header class="header-mobile">
@@ -52,7 +52,7 @@
                 <p id="carrito-vacio" class="carrito-vacio">Tu carrito está vacío. <i class="bi bi-emoji-frown"></i></p>
 
                 <div id="carrito-productos" class="carrito-productos disabled">
-                    <!-- Esto se va a completar con el JS -->
+                    <!-- Esto se va a completar con el JS  -->
                 </div>
 
                 <div id="carrito-acciones" class="carrito-acciones disabled">
@@ -74,13 +74,12 @@
             </div>
         </main>
     </div>
-    <!-- <div id="footer"></div> -->
+    <div id="footer"></div>
 
 
-    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
+
     <script src="../js/carrito.js"></script>
-    <!-- <script src="../js/menu.js"></script> -->
+    <script src="../js/menu.js"></script>
 
 </body>
 
