--- a/proyecto/html/Compra.html
+++ b/proyecto/html/Compra.html
@@ -28,15 +28,15 @@
                     </li>
 
                     <li>
-                        <button id="abrigos" class=" boton-menu boton-categoria  "><i
+                        <button id="natacion" class=" boton-menu boton-categoria  "><i
                                 class="bi bi-hand-index"></i>Natacion</button>
                     </li>
                     <li>
-                        <button id="camisetas" class="boton-menu boton-categoria  "><i
+                        <button id="gimnasio" class="boton-menu boton-categoria  "><i
                                 class="bi bi-hand-index"></i>Gimnasio</button>
                     </li>
                     <li>
-                        <button id="pantalones" class="boton-menu boton-categoria"><i
+                        <button id="padel" class="boton-menu boton-categoria"><i
                                 class="bi bi-hand-index"></i>Padel</button>
                     </li>
                     <li>
