--- a/proyecto/html/inscripcion.html
+++ b/proyecto/html/inscripcion.html
@@ -18,6 +18,7 @@
                 <input type="text" placeholder="Nombre" class="inputForm" id="nombre">
                 <input type="text" placeholder="Apellido" class="inputForm" id="apellido">
                 <input type="text" placeholder="Direccion" class="inputForm" id="direccion">
+                <input type="text" placeholder="Altura" class="inputForm" id="altura">
                 <input type="text" placeholder="DNI" class="inputForm" id="dni">
                 <input type="text" placeholder="Telefono" class="inputForm" id="telefono">
                 <input type="text" placeholder="Email" class="inputForm" id="email">
@@ -27,6 +28,7 @@
                     <input type="number" placeholder="Mes" class="inputForm" id="mes">
                     <input type="number" placeholder="Anio" class="inputForm" id="anio">
                 </div>
+
                 <select name="" id="deporte" class="select">
                     <option value="">Seleccione una actividad </option>
                     <option value="Gimnasio">Gimnasio </option>
